--- a/index.html
+++ b/index.html
@@ -122,6 +122,29 @@
     </div>
   </div>
 </section>
+    
+<section class="projects" id="comments">
+  <h2>留言</h2>
+  <p class="subtitle">欢迎留言交流～</p>
+
+  <!-- Giscus 评论区 -->
+  <!-- 把 giscus 生成的 <script> 粘在下面 -->
+  <script src="https://giscus.app/client.js"
+        data-repo="luyifeilyf258-prog/my-homepage"
+        data-repo-id="R_kgDOQxkLqw"
+        data-category="[在此输入分类名]"
+        data-category-id="[在此输入分类 ID]"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
+</section>
 
     <footer class="footer">
       <span id="year"></span> · Made with❤️
@@ -133,3 +156,4 @@
 <script src="main.js"></script>
 </body>
 </html>
+
