--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
 
   <!-- Giscus 评论区 -->
   <!-- 把 giscus 生成的 <script> 粘在下面 -->
-  <script src="https://giscus.app/client.js"
+ <script src="https://giscus.app/client.js"
         data-repo="luyifeilyf258-prog/my-homepage"
         data-repo-id="R_kgDOQxkLqw"
-        data-category="[在此输入分类名]"
-        data-category-id="[在此输入分类 ID]"
+        data-category="General"
+        data-category-id="DIC_kwDOQxkLq84C0bD8"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
@@ -156,4 +156,5 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
